# ChangeLog for dev-libs/apr-util
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.88 2007/06/28 13:06:39 armin76 Exp $

  28 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-util-0.9.12-r1.ebuild:
  ia64 stable wrt #178750

  27 Jun 2007; Lars Weiler <pylon@gentoo.org> apr-util-1.2.8.ebuild:
  Stable on ppc; bug #178264.

  27 Jun 2007; Christoph Mende <angelos@gentoo.org>
  apr-util-0.9.12-r1.ebuild:
  Stable on amd64

  27 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  apr-util-0.9.12-r1.ebuild:
  Stable on sparc wrt #169507

  27 Jun 2007; Jeroen Roovers <jer@gentoo.org> apr-util-1.2.8.ebuild:
  Stable for HPPA (bug #178264).

*apr-util-1.2.8-r1 (15 Jun 2007)

  15 Jun 2007; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.2.8-r1.ebuild:
  fix #127781 (mysql support)

  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-util-1.2.8.ebuild:
  alpha/ia64/x86 stable wrt #178264

  14 Jun 2007; Christoph Mende <angelos@gentoo.org> apr-util-1.2.8.ebuild:
  Stable on amd64 wrt bug 178264

  13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> apr-util-1.2.8.ebuild:
  Stable on sparc wrt #178264

  09 Jun 2007; Markus Rothe <corsair@gentoo.org> apr-util-1.2.8.ebuild:
  Stable on ppc64; bug #178264

  23 Mar 2007; Christian Heim <phreak@gentoo.org> apr-util-1.2.8.ebuild:
  Updating the postgres? DEPEND, only dev-db/libpq is need, not a full-blown
  postgres install. Thanks to Tiziano Mueller for noticing.

  08 Mar 2007; Christian Heim <phreak@gentoo.org> apr-util-0.9.12-r1.ebuild:
  Finally fixing apr-util-0.9.12, forcing autoconf-1.7 (thanks to Marcus
  Hanwell in #169927).

  08 Mar 2007; Christian Heim <phreak@gentoo.org> apr-util-0.9.12-r1.ebuild:
  Using fixed versions for autoconf/automake (WANT_AUTO(CONF|MAKE)), as
  autoconf-2.61 gets --libdir wrong (as in ignores it - which shoots multilib
  in the foot). Thanks to Alexis Ballier (#169927) for pointing it out.
