@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX apr-util-0.9.12-db-4.5.patch 3700 RMD160 bf230d5e84cb1ed09645f37ce73e803c5ac0c7ff SHA1 e03eef45265ecd0510d6e15118403bd2ef956b32 SHA256 e77d59dfe8289d3ad6e96d12651534e6634c629b91723c43583b7171308f99d3
 MD5 e04ae5a7ef56703daed38416e3e75a64 files/apr-util-0.9.12-db-4.5.patch 3700
 RMD160 bf230d5e84cb1ed09645f37ce73e803c5ac0c7ff files/apr-util-0.9.12-db-4.5.patch 3700
@@ -23,18 +26,18 @@ EBUILD apr-util-0.9.13.ebuild 2043 RMD160 dabe71c45e9cac8582e6f1a99a81380c2b6614
 MD5 fb2f3c06317d63d5ef26f8ff4b158821 apr-util-0.9.13.ebuild 2043
 RMD160 dabe71c45e9cac8582e6f1a99a81380c2b66145c apr-util-0.9.13.ebuild 2043
 SHA256 43bd1dd507fb606ddbbad953ec140450b61dcfb6331582c95e6cff52000b4317 apr-util-0.9.13.ebuild 2043
-EBUILD apr-util-1.2.8-r1.ebuild 2116 RMD160 ddc30c86e5867a0e42dff6209dd7325c0b65a213 SHA1 856cd805af4487c58eaa16509ce1aa575e77adb8 SHA256 0f136bc6daac94d9550d1bc35273c1eb11f4c6c7ac70d25675b33bc890f2ecc6
-MD5 246153b1a3134ac4acfac5a113458edf apr-util-1.2.8-r1.ebuild 2116
-RMD160 ddc30c86e5867a0e42dff6209dd7325c0b65a213 apr-util-1.2.8-r1.ebuild 2116
-SHA256 0f136bc6daac94d9550d1bc35273c1eb11f4c6c7ac70d25675b33bc890f2ecc6 apr-util-1.2.8-r1.ebuild 2116
+EBUILD apr-util-1.2.8-r1.ebuild 2185 RMD160 1c0e064c982b796a06799c9139fb682c9e36483a SHA1 75eec529af075158ae27acf252f7649e278eaf42 SHA256 960a520e0989690d351c6f668824383699234e7cf2a78fc059fdaae40d0bbd4c
+MD5 1a9479d9ae9414478b65a30652bd8329 apr-util-1.2.8-r1.ebuild 2185
+RMD160 1c0e064c982b796a06799c9139fb682c9e36483a apr-util-1.2.8-r1.ebuild 2185
+SHA256 960a520e0989690d351c6f668824383699234e7cf2a78fc059fdaae40d0bbd4c apr-util-1.2.8-r1.ebuild 2185
 EBUILD apr-util-1.2.8.ebuild 1851 RMD160 ee4dad63cf225a5af084bf9d4e019f6b71155e8d SHA1 eeb77c637f750cadd13ca89f13ce8def1df12f29 SHA256 7c89f3ca966c454e3e4e37fcf2db42032d4618a2254ced51f8ec922d1629868d
 MD5 cc4ee40706b1a4e48c48352f411fc481 apr-util-1.2.8.ebuild 1851
 RMD160 ee4dad63cf225a5af084bf9d4e019f6b71155e8d apr-util-1.2.8.ebuild 1851
 SHA256 7c89f3ca966c454e3e4e37fcf2db42032d4618a2254ced51f8ec922d1629868d apr-util-1.2.8.ebuild 1851
-MISC ChangeLog 11504 RMD160 29f0acd0d67a74967c607e515f4074e0b4e3618a SHA1 0dcd0ffbc5b1b61ecbac98d736f600a20ca98b67 SHA256 b04ba3fcb2a6290238322356cd8b8598675604555660bba36b58230470c8b26a
-MD5 ba52c29e1cddf37dbca07cfd2c496c13 ChangeLog 11504
-RMD160 29f0acd0d67a74967c607e515f4074e0b4e3618a ChangeLog 11504
-SHA256 b04ba3fcb2a6290238322356cd8b8598675604555660bba36b58230470c8b26a ChangeLog 11504
+MISC ChangeLog 11710 RMD160 74c181ce101360fc3a335c6537b4f98a04c9866f SHA1 f8902cced7095b22241495881adc0972432ec13a SHA256 46818128c90d66599a726f567d901002020934221c3d3a1d2949852e575dbade
+MD5 3c2923e69b27fbdc05ece3d71faa0a59 ChangeLog 11710
+RMD160 74c181ce101360fc3a335c6537b4f98a04c9866f ChangeLog 11710
+SHA256 46818128c90d66599a726f567d901002020934221c3d3a1d2949852e575dbade ChangeLog 11710
 MISC metadata.xml 229 RMD160 bb816bd761846ad578f8c1521a1f1ec6297410f4 SHA1 92fdbcb6a85ece96506733ad67a5e4e74a58a529 SHA256 8e1aafc5385805d45759406a60df79f0ce88aa1df1a58d44b596405d64c9226d
 MD5 17bfbf436c6d4afc4dea019597d048d1 metadata.xml 229
 RMD160 bb816bd761846ad578f8c1521a1f1ec6297410f4 metadata.xml 229
@@ -54,3 +57,10 @@ SHA256 a7c1a1dbe44c46c939a97e41af609777b572f8b6e389622588b65cfd710c4649 files/di
 MD5 a370b4eedd72b270820f53bdaad70cd7 files/digest-apr-util-1.2.8-r1 711
 RMD160 307be2c9b20be5df35eb35bdd0a9de35ead82a88 files/digest-apr-util-1.2.8-r1 711
 SHA256 9a4af4640885ebd660f0ba90f3b00c03b7c7ec7fc2adc44e95d803e9868bcf09 files/digest-apr-util-1.2.8-r1 711
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGkUdJyuNVb5qfaOYRArl9AKC7p66MpBrPrN0kMs9GdRWev0KxegCfdced
+KDPSMhd2arE71Al7LNYQCV8=
+=8xXf
+-----END PGP SIGNATURE-----
