@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.88 2007/06/28 13:06:39 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.89 2007/07/08 20:21:20 phreak Exp $
+
+  08 Jul 2007; Christian Heim <phreak@gentoo.org> apr-util-1.2.8-r1.ebuild:
+  Fix the compilation issue with mysql (#184636 - Rajiv Aaron Manglani <rajiv
+  at gentoo.org>), as apr_dbd_mysql needs mysql-5*.
 
   28 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-util-0.9.12-r1.ebuild:
   ia64 stable wrt #178750
